opensesame (3.0.5~a1-ubuntu1) wily; urgency=medium

  * Bugs fixed
    - Fix catching of unexpected errors in multiprocess runner (#382)
    - Don't crash when entering numeric break-if statement in loop
    - Register 'self' when executing conditional statements (for backwards compatibility)
    - Fix missing py3compat import in joystick
  * Improvements
    - Add unit test for required py3compat import and encoding declaration

 -- Sebastiaan Mathot <sebastiaan@mantis>  Tue, 01 Dec 2015 17:15:57 +0100

opensesame (3.0.4-ubuntu1) wily; urgency=medium

  * Bugs fixed
    - Fix regression where sketchpad didn't use the file pool

 -- Sebastiaan Mathot <sebastiaan@mantis>  Sat, 28 Nov 2015 20:25:08 +0100

opensesame (3.0.3-ubuntu1) wily; urgency=medium

  * Bugs fixed
    - Fix Python-3 compatibility for script validator
    - Restore overview area when drop fails (#361)
    - Warn on missing `__end__` statements in OpenSesame script (#364)
    - Don't be greedy when parsing YAML front matter (#369)
    - Fix external_runner (#371)
    - Improve handling of variably defined font and sketchpad element settings (#372)
    - Don't crash when moving sketchpad elements with variably defined positions (#373)
    - Don't crash when copy-pasting in loop table when no cells are selected (#374)
    - Fall back to z_index=0 when an invalid z_index has been specified for sketchpad elements (#375)
    - Don't crash on empty filename in image element in sketchpad (#377)
    - Fix recursion error in overview area with multiple linked copies (#376)
    - Don't try to copy and edit non copyable/editable treeitems
    - Don't crash when failing to get size information for file pool
    - Catch invalid variable names in logger script
    - Don't allow editing run-if statement of top-level sequence in sequence-view
    - Fix gabor and noise-patch elements
  * Improvements
    - Fix templates for Python 3
    - Fix Exception handling for multiprocess_runner in Python 3